--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,4 @@
-form
+form(action='/login', method='POST')
   .input-group
     label(for='email') Email
     input#email(type='email', name='email')
