--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,6 @@
-
+each msgs, type in messages
+  for msg in msgs
+    p(class=type)= msg
 if user
     h1 Hello #{user.email}
     form(action='/login?_method=delete', method='POST')
